kubectl/deployments/cks/0.default_deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: cks
spec:
  podSelector: {}   
  policyTypes:
  - Ingress
  - Egress
